# pam-oauth

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  TODO.md  Taskfile.yml  go.mod  go.sum  pam-oauth.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: release.yml  security.yml
api/: grpc.proto
cmd/client/: initialize.go  man.go  root.go  run.go
cmd/login/: root.go
cmd/server/: add_client.go  client.go  initialize.go  list_clients.go  remove_client.go  root.go  serve.go
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/nss/: Cargo.toml
crates/pam/: Cargo.toml  build.rs
crates/pam-oauth-client-utils/: Cargo.toml
crates/pam-oauth-client-utils/src/: args.rs  main.rs  nss.rs  pam.rs  utils.rs
crates/pam-oauth-pam/: Cargo.toml
crates/pam-oauth-pam/src/: api.rs  args.rs  lib.rs
crates/pam/src/: lib.rs  utils.rs
init/: pam-oauth-server.service
internal/api/: grpc.pb.go  grpc_grpc.pb.go
internal/client/: config.go  internal_client.go  pam.go  pwd.go  switch.go  utils.go
internal/common/: build.go  log.go  utils.go
internal/server/: allow_list.go  challenge_manager.go  config.go  echo.go  internal_server.go  oauth_server.go  pki.go  utils.go  web.go
internal/server/web/static/: pico.min.css
internal/server/web/templates/: flow-end.html
lib/: nss.c  pam.c
pkg/: nfpm-server.yml
pkg/init/: pam-oauth-server.service
